5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1811_2571.log
== TEST (2019-06-08 16:36:21) 
-- CODE:
s=input("digite a frase: ")

for elemento in s:
	s.raplace(a, '')
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s.raplace(a, '')
AttributeError: 'str' object has no attribute 'raplace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 16:37:09) 
-- CODE:
s=input("digite a frase: ")

for elemento in s:
	s.replace(a, '')
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s.replace(a, '')
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 16:37:49) 
-- CODE:
s=input("digite a frase: ").split

for elemento in s:
	s.replace('a', '')
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for elemento in s:
TypeError: 'builtin_function_or_method' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:34:40) 
-- CODE:
s=input("digite a frase: ")
i=0
for elemento in s:
	if(s[i]=="a"):
		s.replace('a', '')
print(s)
	
	
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:35:13) 
-- CODE:
s=input("digite a frase: ")
i=0
for elemento in s:
	if(s[i]=="a"):
		s.replace('a', '')
print(s)
	
	
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:35:35) 
-- CODE:
s=input("digite a frase: ")
i=0
for elemento in s:
	if(s[i]=="a"):
		s.replace('a', '')
	print(s)
	
	
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:46) 
-- CODE:
s=input("digite a frase: ")
i=0
for elemento in s:
	if(s[i]=="a"):
		s.replace('a', '')
	print(s)
	
	
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:54) 
-- CODE:
s=input("digite a frase: ")
i=0
for elemento in s:
	if(s[i]=="a"):
		s.replace('a', '')
print(s)
	
	
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:28) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:25) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:41) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:45:03) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:45:13) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:45:34) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:39) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:43) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:54) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:47:18) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
print(f)
	
	
-- OUTPUT:
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:48:28) 
-- CODE:
s=input("digite a frase: ")

f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
	print(f)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(s[i]!="a" and s[i]!="A"):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:50:14) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
	i=i+1
print(f)
	
	
-- OUTPUT:
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-ICOMP-UFInstituto_de_Computco-ICOMP-UFAMM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:50:22) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
	i=i+1
print(f)
	
	
-- OUTPUT:
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-ICOMP-UFInstituto_de_Computco-ICOMP-UFAMM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:50:33) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
		f=f+j
	i=i+1
	print(f)
	
	
-- OUTPUT:
I
In
Ins
Inst
Insti
Instit
Institu
Institut
Instituto
Instituto_
Instituto_d
Instituto_de
Instituto_de_
Instituto_de_C
Instituto_de_Co
Instituto_de_Com
Instituto_de_Comp
Instituto_de_Compu
Instituto_de_Comput
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAM
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMc
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAM
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-I
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-IC
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-ICO
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Computco-ICOMP-UFAMo-ICOM
Instituto_de_ComputInstituto_de_Computco-ICOMP-UFAMcInstituto_de_Compu
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:50:54) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
	i=i+1
	print(f)
	
	
-- OUTPUT:
I
In
Ins
Inst
Insti
Instit
Institu
Institut
Instituto
Instituto_
Instituto_d
Instituto_de
Instituto_de_
Instituto_de_C
Instituto_de_Co
Instituto_de_Com
Instituto_de_Comp
Instituto_de_Compu
Instituto_de_Comput
Instituto_de_Comput
Instituto_de_Computc
Instituto_de_Computc
Instituto_de_Computco
Instituto_de_Computco-
Instituto_de_Computco-I
Instituto_de_Computco-IC
Instituto_de_Computco-ICO
Instituto_de_Computco-ICOM
Instituto_de_Computco-ICOMP
Instituto_de_Computco-ICOMP-
Instituto_de_Computco-ICOMP-U
Instituto_de_Computco-ICOMP-UF
Instituto_de_Computco-ICOMP-UF
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:51:07) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
	i=i+1
print(f)
	
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:51:16) 
-- CODE:
s=input("digite a frase: ")
i=0
f=""
for elemento in s:
	if(s[i]!="a" and s[i]!="A"):
		f=f+s[i]
	else:
		j=s.replace("a", "")
	i=i+1
print(f)
	
-- EXECUTION TIME:
0.892757
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
